--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
 
         <div class="card">
-            <div class="section-title">Shooting Range (Max Numbers)</div>
+            <div class="section-title">Shooting Range</div>
             <div class="target-toggle">
                 <button class="t-btn active" id="t-elite" onclick="toggleTarget('elite')">Target: Elite (DtA)</button>
                 <button class="t-btn" id="t-health" onclick="toggleTarget('health')">Target: Health (DtH)</button>
@@ -221,7 +221,7 @@
                 <div class="res-box" style="border-color:var(--orange)"><span class="res-label">TTK Sustain</span><span class="res-val" id="res-ttks">-</span></div>
             </div>
 
-            <div class="section-title">Comparison Matrix (Auto-Highlight)</div>
+            <div class="section-title">Comparison Matrix</div>
             <div style="overflow-x: auto;">
                 <table class="comp-table">
                     <thead><tr id="comp-header"><th>Metric</th></tr></thead>
@@ -446,3 +446,4 @@
 </script>
 </body>
 </html>
+
