--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="input-block">
                 <div class="group"><label>AWD (All Weapon) %</label><input type="number" id="awd" placeholder=""></div>
                 <div class="group"><label>SWD (Weapon Type) %</label><input type="number" id="swd" placeholder=""></div>
-                <div class="group" style="grid-column: span 2;"><label>TWD (TOTAL WEAPON DAMAGE e.g. Obliterate, Vigilance) %</label><input type="number" id="twd" placeholder=""></div>
+                <div class="group" style="grid-column: span 2;"><label>TWD (e.g. Obliterate) %</label><input type="number" id="twd" placeholder=""></div>
             </div>
 
             <div class="section-title">3. Combat Stats & Rates</div>
@@ -159,7 +159,7 @@
                 <div class="group"><label>CHC %</label><input type="number" id="chc" placeholder=""></div>
                 <div class="group"><label>CHD %</label><input type="number" id="chd" placeholder=""></div>
                 <div class="group"><label>HSD %</label><input type="number" id="hsd" placeholder=""></div>
-                <div class="group"><label>DTOC %</label><input type="number" id="dttooc" placeholder=""></div>
+                <div class="group"><label>DttOOC %</label><input type="number" id="dttooc" placeholder=""></div>
                 <div class="group"><label>DtA %</label><input type="number" id="dta" placeholder=""></div>
                 <div class="group"><label>DtH %</label><input type="number" id="dth" placeholder=""></div>
             </div>
@@ -167,7 +167,7 @@
             <div class="section-title">4. %-Rate Enemies (Calculated Avg)</div>
             <div class="input-block">
                 <div class="group"><label>HS-Rate %</label><input type="number" id="h-rate" value="20"></div>
-                <div class="group"><label>DTOC-Rate %</label><input type="number" id="d-rate" value="60"></div>
+                <div class="group"><label>DTTOOC-Rate %</label><input type="number" id="d-rate" value="60"></div>
                 <div class="group"><label>Armor-Rate %</label><input type="number" id="a-rate" value="80"></div>
             </div>
 
@@ -387,4 +387,3 @@
 </script>
 </body>
 </html>
-
