--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="section-title">5. Amplifiers</div>
             <div class="hint-text">
                 <i class="fas fa-bolt"></i> 
-                <strong>Examples:</strong> Striker (e.g. 65%/90/180%), Glass Cannon (25%) etc.
+                <strong>Examples:</strong> Striker (e.g. 90%), Glass Cannon (25%) etc.
             </div>
             <div class="input-block">
                 <div class="group"><label>Amp 1 %</label><input type="number" id="m1" placeholder="Striker"></div>
@@ -383,4 +383,5 @@
 </script>
 </body>
 </html>
+
 
