--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         }
         input:focus { border-color: var(--orange); outline: none; }
 
-        .hint-text { font-size: 11px; color: #888; margin-bottom: 15px; font-style: italic; line-height: 1.4; }
+        .hint-text { font-size: 11px; color: #888; margin-bottom: 15px; font-style: italic; line-height: 1.4; padding-left: 5px; }
         .hint-text i { color: var(--orange); margin-right: 5px; }
 
         .range-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-bottom: 20px; }
@@ -162,7 +162,10 @@
     <div class="main-grid">
         <div class="card">
             <div class="section-title">0. Calculate Base Damage</div>
-            <div class="hint-text"><i class="fas fa-info-circle"></i> Use this to find your Base Damage from Menu Stats.</div>
+            <div class="hint-text">
+                <i class="fas fa-info-circle"></i> 
+                <strong>How to find:</strong> Open Inventory > Stats > Weapon Damage, All Weapon Damage Bonus %, Specific Weapon Damage % (e.g. AR, SMG).
+            </div>
             <div class="input-block">
                 <div class="group"><label>Weapon Damage</label><input type="number" id="menu-dmg" oninput="calculateBase()"></div>
                 <div class="group"><label>AWD %</label><input type="number" id="menu-awd" oninput="calculateBase()"></div>
@@ -230,6 +233,7 @@
             </div>
 
             <div class="section-title">4. %-Rate Uptime</div>
+            <div class="hint-text"><i class="fas fa-info-circle"></i> Rec: HS 20% | DTOC 60% | Armor 80%</div>
             <div class="input-block">
                 <div class="group"><label>HS-Rate %</label><input type="number" id="h-rate" value="20" oninput="calculate()"></div>
                 <div class="group"><label>DTOC-Rate %</label><input type="number" id="d-rate" value="60" oninput="calculate()"></div>
@@ -237,6 +241,7 @@
             </div>
 
             <div class="section-title">5. Amplifiers</div>
+            <div class="hint-text"><i class="fas fa-info-circle"></i> e.g. Striker Stacks in %, Glass Cannon %</div>
             <div class="input-block">
                 <div class="group"><label>Amp 1 %</label><input type="number" id="m1" oninput="calculate()"></div>
                 <div class="group"><label>Amp 2 %</label><input type="number" id="m2" oninput="calculate()"></div>
@@ -372,8 +377,4 @@
         const swd = parseFloat(document.getElementById('swd').value) || 0;
         const twd = parseFloat(document.getElementById('twd').value) || 0;
         const chc = Math.min(60, parseFloat(document.getElementById('chc').value) || 0) / 100;
-        const chd = (parseFloat(document.getElementById('chd').value) || 0) / 100;
-        const hsd = (parseFloat(document.getElementById('hsd').value) || 0) / 100;
-        const ooc = (parseFloat(document.getElementById('dttooc').value) || 0) / 100;
-        const dta = (parseFloat(document.getElementById('dta').value) || 0) / 100;
-        const dth = (parseFloat(document.getElementById(
+        co
