--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
             <div class="section-title">0. Calculate Base Damage</div>
             <div class="hint-text">
                 <i class="fas fa-info-circle"></i> 
-                <strong>How to find:</strong> Open Inventory > Stats > Weapon Damage, All Weapon Damage Bonus %, Specific Weapon Damage % (e.g. AR, SMG).
+                <strong>Guide:</strong> Only use if Base Damage is unknown. Otherwise select a Preset or skip to 1. Weapon Data.<br>
+                <strong>Stats Location:</strong> Open Inventory > Stats > Weapon Damage, All Weapon Damage Bonus %, Specific Weapon Damage % (e.g. AR, SMG).
             </div>
             <div class="input-block">
                 <div class="group"><label>Weapon Damage</label><input type="number" id="menu-dmg" oninput="calculateBase()"></div>
@@ -375,6 +376,4 @@
         const rel = parseFloat(document.getElementById('rel').value) || 0;
         const awd = parseFloat(document.getElementById('awd').value) || 0;
         const swd = parseFloat(document.getElementById('swd').value) || 0;
-        const twd = parseFloat(document.getElementById('twd').value) || 0;
-        const chc = Math.min(60, parseFloat(document.getElementById('chc').value) || 0) / 100;
-        co
+        const twd = parseFloat(document.getE
