--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
             <div class="hint-text">
                 <i class="fas fa-info-circle"></i> 
                 <strong>Guide:</strong> Only use if Base Damage is unknown. Otherwise select a Preset or skip to 1. Weapon Data.<br>
-                <strong>Stats Location:</strong> Open Inventory > Stats > Weapon Damage, All Weapon Damage Bonus %, Specific Weapon Damage % (e.g. AR, SMG).
             </div>
             <div class="input-block">
                 <div class="group"><label>Weapon Damage</label><input type="number" id="menu-dmg" oninput="calculateBase()"></div>
@@ -182,24 +181,11 @@
                         <optgroup label="Assault Rifles">
                             <option value="lexington">Lexington (AR)</option>
                             <option value="st-elmos">St. Elmo's Engine</option>
-                            <option value="eagle-bearer">Eagle Bearer</option>
-                            <option value="the-bighorn">The Bighorn</option>
-                            <option value="capacitor">Capacitor</option>
                             <option value="famas">FAMAS 2010</option>
-                            <option value="m4">Police M4</option>
-                            <option value="carbine7">Carbine 7</option>
                         </optgroup>
                         <optgroup label="SMGs">
                             <option value="ouroboros">Ouroboros</option>
-                            <option value="lady-death">Lady Death</option>
-                            <option value="mpx">MPX</option>
                             <option value="vector">Vector SBR .45</option>
-                        </optgroup>
-                        <optgroup label="LMGs & Rifles">
-                            <option value="iron-lung">Iron Lung</option>
-                            <option value="pestilence">Pestilence</option>
-                            <option value="gr9">GR9</option>
-                            <option value="m1a">Classic M1A</option>
                         </optgroup>
                     </select>
                 </div>
@@ -239,7 +225,7 @@
                 <div class="group"><label>HS-Rate %</label><input type="number" id="h-rate" value="20" oninput="calculate()"></div>
                 <div class="group"><label>DTOC-Rate %</label><input type="number" id="d-rate" value="60" oninput="calculate()"></div>
                 <div class="group"><label>Armor-Rate %</label><input type="number" id="a-rate" value="80" oninput="calculate()"></div>
-            </div>
+                <div class="group"></div> </div>
 
             <div class="section-title">5. Amplifiers</div>
             <div class="hint-text"><i class="fas fa-info-circle"></i> e.g. Striker Stacks in %, Glass Cannon %</div>
@@ -271,16 +257,8 @@
 
             <div class="section-title">Kill Efficiency</div>
             <select id="enemy-select" style="width:100%; margin-bottom:15px;" onchange="calculate()">
-                <optgroup label="Heroic Scalings">
-                    <option value="6050000">Heroic 1P Elite (6.0M)</option>
-                    <option value="16905653" selected>Heroic 4P Elite (16.9M)</option>
-                    <option value="32000000">Heroic 1P Named (32.0M)</option>
-                    <option value="47296250">Heroic 4P Named (47.3M)</option>
-                </optgroup>
-                <optgroup label="Legendary Scalings">
-                    <option value="25172134">Legendary 4P Elite (25.2M)</option>
-                    <option value="72146660">Legendary 4P Named (72.1M)</option>
-                </optgroup>
+                <option value="16905653" selected>Heroic 4P Elite (16.9M)</option>
+                <option value="47296250">Heroic 4P Named (47.3M)</option>
             </select>
             
             <div class="results-grid">
@@ -312,20 +290,9 @@
     const weaponPresets = {
         "lexington": { b: 48699.5, rpm: 700, mag: 30, rel: 2.1 },
         "st-elmos": { b: 46917.5, rpm: 850, mag: 70, rel: 2.2 },
-        "eagle-bearer": { b: 47364.5, rpm: 750, mag: 60, rel: 2.3 },
-        "the-bighorn": { b: 57218.0, rpm: 800, mag: 30, rel: 2.1 },
-        "capacitor": { b: 57617.5, rpm: 700, mag: 40, rel: 2.1 },
         "famas": { b: 37890.0, rpm: 900, mag: 30, rel: 2.1 },
-        "m4": { b: 39500.0, rpm: 850, mag: 30, rel: 2.1 },
-        "carbine7": { b: 41200.0, rpm: 790, mag: 30, rel: 2.1 },
         "ouroboros": { b: 38300.5, rpm: 1485, mag: 50, rel: 1.8 },
-        "lady-death": { b: 35409.0, rpm: 900, mag: 32, rel: 1.9 },
-        "mpx": { b: 45800.0, rpm: 850, mag: 30, rel: 2.0 },
-        "vector": { b: 32500.0, rpm: 1200, mag: 40, rel: 1.7 },
-        "iron-lung": { b: 42000.0, rpm: 800, mag: 100, rel: 3.5 },
-        "pestilence": { b: 55000.0, rpm: 300, mag: 100, rel: 4.2 },
-        "gr9": { b: 29000.0, rpm: 900, mag: 200, rel: 4.5 },
-        "m1a": { b: 185000.0, rpm: 180, mag: 10, rel: 2.5 }
+        "vector": { b: 32500.0, rpm: 1200, mag: 40, rel: 1.7 }
     };
 
     window.onload = function() {
@@ -363,8 +330,6 @@
             document.getElementById('rpm').value = w.rpm;
             document.getElementById('mag').value = w.mag;
             document.getElementById('rel').value = w.rel;
-            const selectEl = document.getElementById('preset-select');
-            document.getElementById('build-name').value = selectEl.options[selectEl.selectedIndex].text;
             calculate();
         }
     }
