--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>xSmileyy's DPS Analyzer | Elite Matrix V6.6</title>
+    <title>xSmileyy's DPS Analyzer | Elite Matrix V6.8</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -234,7 +234,7 @@
                 <strong>Guide:</strong> Only use if Base Damage is unknown. Otherwise select a Preset or skip to 1. Weapon Data.<br>
                 <strong>Stats Location:</strong> Open Inventory > Stats > Weapon Damage, All Weapon Damage Bonus %, Specific Weapon Damage % (e.g. AR, SMG).<br>
                 <br>
-                <span style="opacity:0.8"><i class="fas fa-hand-pointer"></i> Tap the <i class="fas fa-question-circle" style="color:var(--orange)"></i> icons to view screenshots.</span>
+                <span style="opacity:0.8"><i class="fas fa-hand-pointer"></i> Tap the <i class="fas fa-question-circle" style="color:var(--orange)"></i> icons to view stats screenshots.</span>
             </div>
             <div class="input-block">
                 <div class="group">
@@ -402,9 +402,9 @@
     let dpsChart;
 
     const helpImages = {
-        'dmg': 'https://i.imgur.com/SwymWKv.png',
-        'awd': 'https://i.imgur.com/m17ulea.png',
-        'swd': 'https://i.imgur.com/jvOyOfE.png'
+        'dmg': 'https://i.imgur.com/NBsyfoh.png',
+        'awd': 'https://i.imgur.com/4SN8wG5.png',
+        'swd': 'https://i.imgur.com/gG2aIhn.png'
     };
 
     function showHelp(type) {
