--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>xSmileyy's DPS Analyzer | Elite Matrix V9.1 (Safe Load)</title>
+    <title>xSmileyy's DPS Analyzer | Elite Matrix V9.2 (Clean UI)</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -303,9 +303,9 @@
             <div class="section-title">1. Weapon Data & Damage %</div>
             <div class="input-block">
                 <div class="group"><label style="color:var(--orange)">Base Damage</label><input type="number" id="base" style="border-color:var(--orange)" oninput="calculate()"></div>
-                <div class="group"><label>RPM</label><input type="number" id="rpm" placeholder="Enter RPM..." oninput="calculate()"></div>
-                <div class="group"><label>Mag Size</label><input type="number" id="mag" placeholder="Enter Mag..." oninput="calculate()"></div>
-                <div class="group"><label>Reload (s)</label><input type="number" id="rel" placeholder="Enter Reload..." oninput="calculate()"></div>
+                <div class="group"><label>RPM</label><input type="number" id="rpm" oninput="calculate()"></div>
+                <div class="group"><label>Mag Size</label><input type="number" id="mag" oninput="calculate()"></div>
+                <div class="group"><label>Reload (s)</label><input type="number" id="rel" oninput="calculate()"></div>
                 
                 <div class="group"><label>AWD %</label><input type="number" id="awd" oninput="calculate()"></div>
                 <div class="group"><label>SWD %</label><input type="number" id="swd" oninput="calculate()"></div>
