--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </div>
 
             <div class="chart-header">
-                <div class="section-title" style="margin:0;">DPS Comparison</div>
+                <div class="section-title" style="margin:0;">Total Damage Timeline (Burst vs. Sustain)</div>
                 <div class="chart-controls">
                     <label style="margin:0;">Graph Time (s):</label>
                     <input type="number" id="graph-time" class="chart-input" value="15" min="1" max="300" oninput="updateGraph()">
